<resources>
    <string name="app_name">Jatz</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="repeat_password">Repeat password</string>
    <string name="username">Username</string>
    <string name="you_have_an_account_login">You have an account? Login</string>
    <string name="create_account">create account</string>
    <string name="parse_server_url">https://parseapi.back4app.com/</string>
    <string name="parse_app_id">BoyhvlVexeVo2931tEmOx1kqIK232TsviI4VbJCG</string>
    <string name="parse_client_key">IGbD28jvcDbp3L60ER50pW5vbf8GPN2coq2s8SO7</string>
    <string name="create_an_account">Create an account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
