<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true"
            android:background="@color/colorPrimary">

    <!-- Main Layout after ScrollView, it has all fields, button and progress bar-->
    <LinearLayout
            android:id="@+id/signup_linear_layuout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <!-- ProgressBar that shows to the user when the account its being created-->
        <ProgressBar
                android:id="@+id/signup_proggress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:indeterminate="true"
                android:background="@color/colorPrimary"
                android:indeterminateTint="@color/colorAccent"
                android:layout_below="@+id/signup_linear_layuout"
                style="?android:attr/progressBarStyleHorizontal"/>

        <!--Name field and its layout-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Surname field and its layout-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_surname_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Username field and its layout-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_nick_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Email field and its layout-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--First password field and its layout-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Repeat password field-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_repeat_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--RelativeLayout that offers position stability for signUpButton-->
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="72dp">

            <!--SingUpButton that executes the create account procces after verifying every field-->
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginBottom="19dp"
                    android:padding="12dp"
                    android:text="@string/create_account"
                    android:textColor="#545454"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="87dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="89dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/shape_round_button"/>

        </RelativeLayout>

        <!--RelativeLayout that offers position stability to loginText-->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <!-- TextView that launchs LoginActivity -->
            <TextView android:id="@+id/signup_login_text"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="24dp"
                      android:text="@string/you_have_an_account_login"
                      android:gravity="center"
                      android:textSize="16sp"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>