<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true" android:background="@color/colorPrimary">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <ImageView android:src="@drawable/jatzlogo"
                   android:layout_width="340dp"
                   android:layout_height="219dp"
                   android:layout_marginBottom="24dp"
                   android:layout_gravity="center_horizontal"
                   android:contentDescription="TODO"/>

        <!--  Email Label -->

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" android:id="@+id/emailText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Password Label -->

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" android:id="@+id/passwordText" android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="72dp">

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginButton"
                    android:layout_width="139dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="14dp"
                    android:padding="12dp"
                    android:text="@string/login"
                    android:textColor="#545454"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="106dp"
                    android:layout_alignParentStart="true" android:layout_marginStart="118dp"
                    android:layout_alignParentBottom="true" android:layout_marginTop="8dp"
                    android:layout_alignParentTop="true" android:background="@drawable/loginboton"/>
        </RelativeLayout>

        <TextView android:id="@+id/signupText"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="Create an account"
                  android:gravity="center"
                  android:textSize="16sp"/>

    </LinearLayout>

</ScrollView>